@@ -1,5 +1,9 @@
 LIST OF CHANGES FOR NPG-QC PACKAGE
 
+ - genotype check: speed up pipeline job submission for deeply plexed lanes
+   by moving calls that involde access to reference repository out of the
+   can_run method
+
 release 62.8
  - tag_sniff modified clip and revcomp options to handle split tags
  - Sort results for merged genotypes as well - to avoid out of order failure.
